<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="50dip" >

	    <LinearLayout
	        android:id="@+id/LL_Group_Questions"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    
		    <LinearLayout
		    	android:id="@+id/LL_Group_Affichage"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		
		        <TextView
		            android:id="@+id/TV_Titre_Group_Config_Affichage"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:singleLine="true"
		            android:text="@string/txt_config_affichage"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textStyle="bold" >
		
				</TextView>
		    </LinearLayout>
		    <LinearLayout
				android:id="@+id/LL_Param_Type_Libelle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/LL_Param_Type_Libelle_Ligne1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:layout_weight="3">
				         <TextView
							android:id="@+id/TV_Type_Libelle"
							android:text="@string/txt_config_aff_type_lib_titre"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content">
						</TextView>
					</LinearLayout>	
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:layout_weight="2">
			           <Spinner
							android:id="@+id/Spin_Type_Libelle"
							android:layout_height="wrap_content"
							android:layout_width="match_parent">
						</Spinner>
					</LinearLayout>
				</LinearLayout>
			 	<TextView
					android:id="@+id/TV_Detail_Type_Libelle"
					android:text="@string/txt_config_aff_type_lib_detail"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#535A5F">
				</TextView>
			</LinearLayout>
		    <LinearLayout
		    	android:id="@+id/LL_Group_Filtres"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dp" >
		
		        <TextView
		            android:id="@+id/TV_Titre_Group_Config_Filtres"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:singleLine="true"
		            android:text="@string/txt_config_filtres"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textStyle="bold" >
		
				</TextView>
		    </LinearLayout>
		    <LinearLayout
				android:id="@+id/LL_Param_Filtre_Type_Fiche"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/LL_Param_Filtre_Type_Fiche_Ligne1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:layout_weight="3">
				         <TextView
							android:id="@+id/TV_Filtre_Type_Fiche"
							android:text="@string/txt_config_filtre_type_fiche_titre"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content">
						</TextView>
					</LinearLayout>	
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:layout_weight="2">
			           <Spinner
							android:id="@+id/Spin_Filtre_Type_Fiche"
							android:layout_height="wrap_content"
							android:layout_width="match_parent">
						</Spinner>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		    <LinearLayout
				android:id="@+id/LL_Param_Filtre_Zone_Geo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
		        <LinearLayout
					android:id="@+id/LL_Param_Filtre_Zone_Geo_Ligne1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:layout_weight="3">
			            <TextView
							android:id="@+id/TV_Titre_Filtre_Zone_Geo"
							android:text="@string/txt_config_filtre_zone_geo_titre"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content">
						</TextView>
					</LinearLayout>
			       <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:layout_weight="2">
			            <Spinner
							android:id="@+id/Spin_Filtre_Zone_Geo"
							android:layout_height="wrap_content"
							android:layout_width="match_parent">
						</Spinner>
					</LinearLayout>
		        </LinearLayout>
		        <TextView
					android:id="@+id/TV_Detail_Filtre_Zone_Geo"
					android:text="@string/txt_config_filtre_zone_geo_detail"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#535A5F">
				</TextView>
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/LL_Group_Telech"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="8dp" >
				
		        <TextView
		            android:id="@+id/TV_Titre_Group_Config_Telech"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:singleLine="true"
		            android:text="@string/txt_config_telechargement"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textStyle="bold" >
		
				</TextView>
		    </LinearLayout>
		    <LinearLayout
				android:id="@+id/LL_Param_Telech"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
		        <LinearLayout
					android:id="@+id/LL_Param_Telech_Ligne1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:layout_weight="3">
			            <TextView
							android:id="@+id/TV_Titre_Cache"
							android:text="@string/txt_config_cache_titre"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content">
						</TextView>
					</LinearLayout>
			       <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:layout_weight="2">
			            <Spinner
							android:id="@+id/Spin_Cache"
							android:layout_height="wrap_content"
							android:layout_width="match_parent">
						</Spinner>
					</LinearLayout>
		        </LinearLayout>
		        <TextView
					android:id="@+id/TV_Detail_Cache"
					android:text="@string/txt_config_cache_detail"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#535A5F">
				</TextView>
		    </LinearLayout>
		    <LinearLayout
				android:id="@+id/LL_Vide_Cache"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
		        <LinearLayout
					android:id="@+id/LL_Vide_Cache_Ligne1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
		            <TextView
						android:id="@+id/TV_Titre_Vide_Cache"
						android:text="@string/txt_config_cache_vider_titre"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content">
					</TextView>
			       <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="right">
			            <Button
							android:id="@+id/Btn_Vide_Cache"
							android:text="Vider"
							android:layout_height="wrap_content"
							android:layout_width="100dip">
						</Button>
					</LinearLayout>
		        </LinearLayout>
		        <TextView
					android:id="@+id/TV_Detail_Cache2"
					android:text="@string/txt_config_cache_vider_det"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#535A5F">
				</TextView>
		    </LinearLayout>
	    </LinearLayout>
	</ScrollView>
    <LinearLayout
        android:id="@+id/LL_Group_Quitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right" >

        <Button
            android:id="@+id/Btn_Quitter"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="Quitter" />
    </LinearLayout>

</RelativeLayout>
